modificacao do portifolio

--- a/portifolio.html
+++ b/portifolio.html
@@ -624,7 +624,7 @@
                             alt="Weather App">
                     </div>
                     <div class="project-info">
-                        <h3>Aplicativo de Clima</h3>
+                        <h3>Cardápio Online</h3>
                         <p>Aplicativo que mostra previsão do tempo em tempo real usando API pública com busca por
                             localização.</p>
                         <div class="project-tech">
@@ -680,11 +680,11 @@
             <div class="footer-content">
                 <div class="social-links">
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/adeilton-junior-755a491b6/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
-                <p class="copyright">&copy; <span id="year"></span> Seu Nome. Todos os direitos reservados.</p>
+                <p class="copyright">&copy; <span id="year"></span> Adeilton. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
